--- a/prelim_research/requirements.txt
+++ b/prelim_research/requirements.txt
@@ -1,11 +1,31 @@
+alpha-vantage==2.1.0
+appnope==0.1.0
+backcall==0.1.0
+certifi==2018.8.24
+chardet==3.0.4
 cycler==0.10.0
+decorator==4.3.0
+idna==2.7
+ipython==7.0.1
+ipython-genutils==0.2.0
+jedi==0.13.1
 kiwisolver==1.0.1
 matplotlib==3.0.0
 numpy==1.15.2
 pandas==0.23.4
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
+prompt-toolkit==2.0.5
+ptyprocess==0.6.0
+Pygments==2.2.0
 pyparsing==2.2.2
 python-dateutil==2.7.3
 pytz==2018.5
+requests==2.19.1
+simplegeneric==0.8.1
 simplejson==3.16.0
 six==1.11.0
-yahoo-finance==1.4.0
+traitlets==4.3.2
+urllib3==1.23
+wcwidth==0.1.7
