--- a/prelim_research/requirements.txt
+++ b/prelim_research/requirements.txt
@@ -19,8 +19,13 @@ jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==6.0.0
+jupyter-contrib-core==0.3.3
 jupyter-core==4.4.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.4
+jupyter-nbextensions-configurator==0.4.0
 kiwisolver==1.0.1
+lxml==4.2.5
 MarkupSafe==1.0
 matplotlib==3.0.0
 mistune==0.8.4
@@ -40,6 +45,7 @@ Pygments==2.2.0
 pyparsing==2.2.2
 python-dateutil==2.7.3
 pytz==2018.5
+PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.4.2
 requests==2.19.1
