--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==6.0.0
 jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.0
 jupyter-core==4.4.0
 jupyter-highlight-selected-word==0.2.0
 jupyter-latex-envs==1.4.4
